fix(styles): added fix for too bold font in firefox

--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -20,6 +20,16 @@ html, body {
   }
 }
 
+/**
+ * Firefox specific rule
+ */
+ @-moz-document url-prefix() {
+  body {
+    font-weight: lighter !important;
+    font-style: normal;
+  }
+}
+
 a, a:visited {
   color: $color-secondary;
 
