feat(common): added routing in logo

--- a/src/components/common/Logo/Logo.module.scss
+++ b/src/components/common/Logo/Logo.module.scss
@@ -1,8 +1,11 @@
+@import 'mixins';
+
 .Logo {
   display: inline-block;
   max-width: 100%;
-  background: url('/images/logo-light.png') center center no-repeat;
+  background: $logo-background;
   background-size: contain;
-  width: 496px;
-  height: 64px;
+  width: $logo-width;
+  height: $logo-height;
+  cursor: pointer;
 }
