--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -9,3 +9,39 @@
     color: $color;
   }
 }
+
+@mixin triangle-up($size, $color) {
+  display: inline-block;
+  width: 0; 
+  height: 0; 
+  border-left: $size solid transparent;
+  border-right: $size solid transparent;
+  border-bottom: $size solid $color;
+}
+
+@mixin triangle-down($size, $color) {
+  display: inline-block;
+  width: 0; 
+  height: 0; 
+  border-left: $size solid transparent;
+  border-right: $size solid transparent;
+  border-top: $size solid $color;
+}
+
+@mixin triangle-right($size, $color) {
+  display: inline-block;
+  width: 0; 
+  height: 0; 
+  border-top: $size solid transparent;
+  border-bottom: $size solid transparent;
+  border-left: $size solid $color;
+}
+
+@mixin triangle-left($size, $color) {
+  display: inline-block;
+  width: 0; 
+  height: 0; 
+  border-top: $size solid transparent;
+  border-bottom: $size solid transparent; 
+  border-right: $size solid $color; 
+}
