--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -45,3 +45,9 @@
   border-bottom: $size solid transparent; 
   border-right: $size solid $color; 
 }
+
+@mixin retina-query {
+  @media (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi) { 
+    @content;
+  }
+}
