--- a/src/styles/component-vars.scss
+++ b/src/styles/component-vars.scss
@@ -36,3 +36,4 @@ $field-padding: rem(10) 0;
 $field-border-radius: 0;
 $field-gap: rem(40);
 $field-placeholder-text-color: $color-back;
+$field-font-weight: 400;
